Adding conversations, users pages, and font-awesome
