# chat-room.ng/src/app/api/model/models.ts
@@ -1,5 +1,4 @@
 export * from './conversation';
-export * from './conversations';
 export * from './errorResponse';
 export * from './helloWorldResponse';
 export * from './message';
