# chat-room.swagger/api/data/users.js
@@ -1,0 +1,32 @@
+var users = [
+  {
+    userId: 1,
+    username: 'jvio',
+    firstName: 'javier',
+    lastName: 'villarreal',
+    email: 'javier.villarreal@live.com',
+    password: '',
+    phone: '123-456-7890',
+    isDoctor: false,
+    age: 35,
+    blood: 'A+',
+    userStatus: 'Online'
+  },
+  {
+    userId: 2,
+    username: 'jsmith',
+    firstName: 'john',
+    lastName: 'smith',
+    email: 'john.smith@live.com',
+    password: '',
+    phone: '123-456-7890',
+    isDoctor: false,
+    age: 35,
+    blood: 'A+',
+    userStatus: 'Online'
+  }
+];
+
+module.exports = {
+  users: users
+};
